kube/cons-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: cons
  name: cons
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cons
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/test_network: "true"
        io.kompose.service: cons
    spec:
      containers:
      - env:
        - name: API_HOST
          value: 20.10.1.8
        - name: kafka
          value: 20.10.1.3
        image: cons
        imagePullPolicy: ""
        name: cons
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
