kube/discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: discovery
  name: discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: discovery
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/test-network: "true"
        io.kompose.service: discovery
    spec:
      containers:
      - image: discovery
        imagePullPolicy: ""
        name: discovery
        ports:
        - containerPort: 5555
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
