kube/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/test-network: "true"
        io.kompose.service: kafka
    spec:
      containers:
      - env:
        - name: KAFKA_ADVERTISED_HOST_NAME
          valueFrom:
            configMapKeyRef:
              key: KAFKA_ADVERTISED_HOST_NAME
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CONNECT_BOOTSTRAP_SERVERS
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CONNECT_BOOTSTRAP_SERVERS
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CONNECT_INTERNAL_KEY_CONVERTER
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CONNECT_INTERNAL_KEY_CONVERTER
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CONNECT_INTERNAL_KEY_CONVERTER_SCHEMAS_ENABLE
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CONNECT_INTERNAL_KEY_CONVERTER_SCHEMAS_ENABLE
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CONNECT_INTERNAL_VALUE_CONVERTER
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CONNECT_INTERNAL_VALUE_CONVERTER
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CONNECT_INTERNAL_VALUE_CONVERTER_SCHEMAS_ENABLE
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CONNECT_INTERNAL_VALUE_CONVERTER_SCHEMAS_ENABLE
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CONNECT_KEY_CONVERTER
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CONNECT_KEY_CONVERTER
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CONNECT_OFFSET_FLUSH_INTERVAL_MS
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CONNECT_OFFSET_FLUSH_INTERVAL_MS
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CONNECT_OFFSET_STORAGE_FILE_FILENAME
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CONNECT_OFFSET_STORAGE_FILE_FILENAME
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CONNECT_REST_ADVERTISED_HOST_NAME
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CONNECT_REST_ADVERTISED_HOST_NAME
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CONNECT_REST_PORT
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CONNECT_REST_PORT
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CONNECT_VALUE_CONVERTER
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CONNECT_VALUE_CONVERTER
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_CREATE_TOPICS
          valueFrom:
            configMapKeyRef:
              key: KAFKA_CREATE_TOPICS
              name: kafka-broker-kafka-variables-env
        - name: KAFKA_ZOOKEEPER_CONNECT
          valueFrom:
            configMapKeyRef:
              key: KAFKA_ZOOKEEPER_CONNECT
              name: kafka-broker-kafka-variables-env
        image: wurstmeister/kafka
        imagePullPolicy: ""
        name: kafka
        ports:
        - containerPort: 9092
        - containerPort: 8082
        - containerPort: 8083
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
