kube/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  template:
    metadata:
      labels:
        io.kompose.service: ui
    spec:
      containers:
      - image: microservices-example-kube_ui:latest
        imagePullPolicy: "IfNotPresent"
        name: ui
        ports:
        - containerPort: 8084
          name: http-server
          protocol: TCP
