kube/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  ports:
  - name: "9092"
    port: 9092
    targetPort: 9092
  - name: "8082"
    port: 8082
    targetPort: 8082
  - name: "8083"
    port: 8083
    targetPort: 8083
  selector:
    io.kompose.service: kafka
status:
  loadBalancer: {}
