kube/orm-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: orm
  name: orm
spec:
  ports:
  - name: "5431"
    port: 5431
    targetPort: 5431
  selector:
    io.kompose.service: orm
