kube/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ui
  name: ui
spec:
  ports:
  - port: 8084
    protocol: TCP
    targetPort: http-server
  selector:
    io.kompose.service: ui
  type: LoadBalancer
